# trading-ecosystem-test-coordinator-py

./: .gitignore  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  TODO.md  pyproject.toml
docs/prs/: chore-epic-TSE-0001-foundation-add-git-quality-standards.md  chore-epic-TSE-0001-todo-journal-system.md  feat-epic-TSE-0001-prometheus-metrics-client.md  feature-TSE-0001.12.0b-prometheus-metrics-client.md  feature-epic-TSE-0001-named-components-foundation.md  feature-epic-TSE-0001.3c-python-grpc-integration.md  refactor-epic-TSE-0001-data-adapters-and-orchestrator.md  refactor-epic-TSE-0001.4-data-adapter-integration.md
scripts/: validate_tse_0001_3c.py
src/test_coordinator/: __init__.py  main.py
src/test_coordinator/domain/: __init__.py  scenario_service.py
src/test_coordinator/domain/ports/: __init__.py  metrics.py
src/test_coordinator/infrastructure/: config.py  configuration_client.py  constants.py  grpc_clients.py  logging.py  performance_monitor.py  service_discovery.py
src/test_coordinator/infrastructure/observability/: __init__.py  metrics_middleware.py
src/test_coordinator/presentation/: health.py
tests/domain/: __init__.py  test_scenario_service_behavior.py
tests/end_to_end/: __init__.py  test_scenario_execution_behavior.py
tests/integration/: test_configuration_service_client.py  test_data_adapter_integration.py  test_inter_service_communication.py
tests/presentation/: __init__.py  test_health_behavior.py
tests/unit/: test_basic_imports.py  test_grpc_clients_basic.py  test_startup.py
tests/unit/domain/ports/: test_metrics_port.py
tests/unit/infrastructure/observability/: test_prometheus_adapter.py
