[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-coordinator"
version = "0.1.0"
description = "Test coordination and chaos testing framework"
authors = [
    {name = "Trading Ecosystem Team", email = "team@quantfidential.com"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "grpcio>=1.59.0",
    "grpcio-tools>=1.59.0",
    "structlog>=23.2.0",
    "redis>=5.0.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0.0",
    "docker>=6.1.0",
    "kubernetes>=28.1.0",
]
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=23.11.0",
]

[tool.hatch.version]
path = "src/test_coordinator/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/test_coordinator"]

[tool.ruff]
target-version = "py313"
line-length = 88
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=test_coordinator",
    "--cov-report=term-missing",
    "--cov-fail-under=85",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]